# pybsimu

./: Dockerfile  Dockerfile.pybsimu  Dockerfile.swig  Makefile  README.md  ibsimu.i  ibsimu_config.sh  particledatabaseimp.hpp.patch  private_pip_setup.sh  pybsimu.i  pybsimu.py  pybsimu_wrap.h  stlfile.hpp.patch
examples/: vlasov2d.py
pybsimu/: pybsimu.i
pybsimu/cmake/: CMakeLists.txt  README.md  pyproject.toml  setup.cfg  setup.py
pybsimu/cmake/bindings_swig/: CMakeLists.txt  __init__.py  pybsimu.i
pybsimu/cmake/cibuildwheel/: build-ibsimu.sh
pybsimu/examples/: plasmacyl.py
pybsimu/examples/radis/: einzelb.stl  maa2a.stl
pybsimu/pybsimu/: pybsimu_wrap.cxx
pybsimu/pybsimu/examples/radis/: maa1b.stl
pybsimu/src/: pybsimu_wrap.h
pybsimu/src/examples/: vlasov2d.py
pybsimu/src/examples/radis/: edump2.stl  einzela.stl  plasma.stl
python/: pybsimu.i  pybsimu.py  pybsimu_wrap.cxx  setup.py
python/examples/: plasmacyl.py  vlasov2d.py
python/examples/radis/: maa2b.stl  radis_simulate.py  simulate.py
python/pybsimu/: Makefile  __init__.py  pybsimu.i
python/pybsimu/examples/: vlasov2d.py
python/pybsimu/examples/radis/: edump.stl  maa1a.stl  puller.stl
vscode/: c_cpp_properties.json
