[build-system]
requires = [
    "wheel",
    "setuptools",
    "cmake_build_extension",
    "numpy",
    "swig"
]

build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
archs = ["x86_64"]
build-verbosity = 3

[tool.cibuildwheel.linux]
before-all = "sh cibuildwheel/build-ibsimu.sh"
repair-wheel-command = "LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/home/ubuntu/lib auditwheel repair -w {dest_dir} {wheel}"