# Set SWIG policies
cmake_policy(SET CMP0078 NEW)
cmake_policy(SET CMP0086 NEW)

find_package(SWIG 4.0 REQUIRED)
set(UseSWIG_MODULE_VERSION 2)
include(${SWIG_USE_FILE})

# =======
# Library
# =======


find_package(PythonLibs REQUIRED)
include_directories(${PYTHON_INCLUDE_DIRS})
#target_link_libraries(__TARGET__ ${PYTHON_LIBRARIES})


# The name of the shared library must match the module name
set_source_files_properties(pybsimu.i PROPERTIES
    CPLUSPLUS ON
    SWIG_MODULE_NAME "pybsimu")

# Create the SWIG library
swig_add_library(swig_bindings
    TYPE MODULE
    LANGUAGE python
    OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/pybsimu
    OUTFILE_DIR ${CMAKE_CURRENT_BINARY_DIR}
    SOURCES pybsimu.i)

#set(CMAKE_SHARED_LINKER_FLAGS "-Wl,--export-all-symbols")

target_link_libraries(swig_bindings PRIVATE pybsimu::pybsimu)

find_package(PkgConfig REQUIRED)
pkg_check_modules(CAIRO REQUIRED cairo)
pkg_check_modules(GTK REQUIRED gtk+-3.0)
pkg_check_modules(GSL REQUIRED gsl)

target_link_libraries(swig_bindings PRIVATE ${CAIRO_LIBRARIES})
target_include_directories(swig_bindings PUBLIC ${CAIRO_INCLUDE_DIRS})

target_link_libraries(swig_bindings PRIVATE ${GTK_LIBRARIES})
target_include_directories(swig_bindings PUBLIC ${GTK_INCLUDE_DIRS})

target_link_libraries(swig_bindings PRIVATE ${GSL_LIBRARIES})
target_include_directories(swig_bindings PUBLIC ${GSL_INCLUDE_DIRS})

set_property(TARGET swig_bindings PROPERTY SWIG_COMPILE_DEFINITIONS _GNU_SOURCE HAVE_SIGINFO_T CAIRO_HAS_PNG_FUNCTIONS)
set_property(TARGET swig_bindings PROPERTY SWIG_COMPILE_OPTIONS -threads)
#target_compile_definitions(swig_bindings _GNU_SOURCE HAVE_SIGINFO_T CAIRO_HAS_PNG_FUNCTIONS)

# -c++ -python -threads -o pybsimu_wrap.cxx -D_GNU_SOURCE -DHAVE_SIGINFO_T -DCAIRO_HAS_PNG_FUNCTIONS -I/home/ubuntu/include/ibsimu-1.0.6dev 
# -L/home/ubuntu/lib -libsimu-1.0.6dev -lfreetype -lfontconfig -lfreetype -lz -lpng16 -lz -lgsl -lgslcblas -lm -lgtk-3 -lgdk-3 -lpangocairo-1.0 -lpango-1.0 -lharfbuzz -latk-1.0 -lcairo-gobject -lcairo -lgdk_pixbuf-2.0 -lgio-2.0 -lgobject-2.0 -lglib-2.0


set_target_properties(swig_bindings PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/pybsimu)

set_property(TARGET swig_bindings PROPERTY
    SWIG_USE_TARGET_INCLUDE_DIRECTORIES TRUE)

# Enable parsing the doxygen comments
#set_property(TARGET swig_bindings
#    PROPERTY SWIG_COMPILE_OPTIONS -doxygen)

# =======
# Install
# =======

# Get the autogenerated Python file
get_property(WRAPPER_PY_FILE
    TARGET swig_bindings
    PROPERTY SWIG_SUPPORT_FILES)

# Install the autogenerated Python file
install(
    FILES ${WRAPPER_PY_FILE}
    DESTINATION ${PYBSIMU_INSTALL_PREFIX}
    COMPONENT bindings)

# Install the SWIG library
install(
    TARGETS swig_bindings
    COMPONENT pybsimu
    LIBRARY DESTINATION ${PYBSIMU_INSTALL_PREFIX}
    ARCHIVE DESTINATION ${PYBSIMU_INSTALL_PREFIX}
    RUNTIME DESTINATION ${PYBSIMU_INSTALL_PREFIX})
